package DB;

message Lines {
	message Line {
		required bytes id = 1;
		required int32 itemId = 2;
		required int32 nowCount = 3;
		required int32 targetCount = 4;
		required int32 workerNum = 5;
	}
	repeated Line line = 1;
}

message Store {
	message Cargo {
		required int32 id = 1;
		required int32 n = 2;
	}
	repeated Cargo existing = 1;
	repeated Cargo reserved = 2;
	repeated Cargo locked = 3;
}

message FlowHistory {
	message Info {
		required int32 ts = 1;
		required int32 n = 2;
	}
	repeated Info i = 1;
}

message Int32Array {
	repeated int32 i = 1;
}